# haitalent_drf_backend

./: README.md
problems_service/: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  pytest.ini  seed_data.py
problems_service/apps/answers/: admin.py  models.py
problems_service/apps/answers/migrations/: 0001_initial.py
problems_service/apps/answers/tests/: test_answers.py
problems_service/apps/api/serializers/: answer_serializer.py  question_serializer.py
problems_service/apps/api/tests/: test_serializers.py
problems_service/apps/api/urls/: __init__.py  answers.py  questions.py
problems_service/apps/api/views/: answers.py  questions.py
problems_service/apps/questions/: admin.py  models.py
problems_service/apps/questions/migrations/: 0001_initial.py
problems_service/apps/questions/tests/: test_questions.py
problems_service/problems_service/: asgi.py  doc_urls.py  settings.py  urls.py  wsgi.py
